# Flexanon

./: README.md
backend/: .env.example  .gitignore  DEPLOY.md  DIAGRAMS.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  cleanup.sh  fix-imports.js  flexanon-idl.json  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.test.json
backend/migrations/: 004_subscriptions.sql
backend/scripts/: generate-keys.js  migrate-db.ts  reset-db.js  reset-db.ts  setup-db.ts
backend/src/: flexanon-idl.json  server.ts
backend/src/config/: database.ts
backend/src/lib/: crypto.ts  merkle.ts  mock-zerion.ts  ownership.ts  signature.ts  solana.ts  (+1 more)
backend/tests/: e2e-zerion.test.ts  generate-link.ts  integration.test.ts  test-e2e.ts  test-generate-share.ts  test-merkle.ts  test-relayer.test.ts
frontend/: .env  eslint.config.mjs  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml
frontend-test/: README.md  index.html  package.json  server.js  share.html
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: SplitText.tsx  connect-wallet-button.tsx  disconnected-state.tsx
frontend/hooks/: use-portfolio-merkle.ts  use-portfolio-merkle.tsx  use-share-link.tsx  use-subscription.tsx
frontend/lib/: api-services.ts  crypto-utils.ts
frontend/providers/: solana-provider.tsx
frontend/public/: index.ts  model.g3d
solana-programs/: Anchor.toml
solana-programs/programs/solana-programs/: Cargo.toml
solana-programs/programs/solana-programs/src/: lib.rs  lib_with_relayer.rs
solana-programs/tests/: flexanon.ts  solana-programs.ts
(+52 files in other folders)
