[package]
name = "solana-programs"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_programs"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]


[lints.rust]
unexpected-cfgs = {level = "warn", check-cfgs = ['cfg(target_os, values("solana"))']}


[dependencies]
anchor-lang = {version = "0.31.1", features = ["init-if-needed"]}

